# sagemaker-gemma3-openwebui

./: .gitignore  CLAUDE.md  README.md  cookbook.md  pyproject.toml
.githooks/: commit-msg
.github/: CLAUDE.md
.github/workflows/: deploy.yml  destroy.yml
docs/: ARCHITECTURE.md  architecture.drawio  sagemaker_quotas.md
infra/: CLAUDE.md  INTEGRATED.md  README.md  STANDALONE.md  delete-full-stack.sh  deploy-full-stack.sh  full-stack.yaml
lambda/openai-proxy/: CLAUDE.md  README.md  pyproject.toml
lambda/openai-proxy/src/: index.py
lambda/openai-proxy/src/openai_proxy/: __init__.py  handler.py
lambda/openai-proxy/tests/: __init__.py  test_handler.py
openwebui/: CLAUDE.md  README.md  docker-compose.yml
scripts/: CLAUDE.md  README.md  pyproject.toml
scripts/src/sagemaker_tools/: __init__.py
scripts/tests/: __init__.py
